suggesties weergeven via jquery autocomplete

--- a/index.html
+++ b/index.html
@@ -195,9 +195,10 @@ function suggestions(text){
   <label for="form-autocomplete" class="active"></label>
 </div> -->
 <!-- <input class="form-control basicAutoComplete" type="text" autocomplete="off"> -->
-
+<div class="ui-widget">
 <label for="autocomplete">Enter Sentence:</label>
 <input class="form-control ui-autocomplete-input" id="mySiGML">
+</div>
 
 <br>
 <!-- <input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' /> -->
