suggesties weergeven via jquery autocomplete

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@ function suggestions(text){
 </div> -->
 <!-- <input class="form-control basicAutoComplete" type="text" autocomplete="off"> -->
 <div class="ui-widget">
-<label for="autocomplete">Enter Sentence:</label>
-<input class="form-control ui-autocomplete-input" id="mySiGML">
+<label for="mySiGML">Enter Sentence:</label>
+<input id="mySiGML">
 </div>
 
 <br>
