suggesties weergeven via jquery autocomplete

--- a/index.html
+++ b/index.html
@@ -180,28 +180,16 @@ function goPython(text){
 
 
 <div align="center">
-<!-- Enter Sentence:<br> -->
+Enter Sentence:<br>
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"> -->
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)">
 </textarea>
 
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul> -->
 
-<!-- <div class="md-form">
-  <input type="search" id="form-autocomplete" class="form-control mdb-autocomplete">
-  <button class="mdb-autocomplete-clear">
-    <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="https://www.w3.org/2000/svg">
-      <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
-      <path d="M0 0h24v24H0z" fill="none" />
-    </svg>
-  </button>
-  <label for="form-autocomplete" class="active"></label>
-</div> -->
-<!-- <input class="form-control basicAutoComplete" type="text" autocomplete="off"> -->
 <div>
   <div class="ui-widget">
-    <label for="mySiGML">Enter Sentence:</label>
-    <input id="mySiGML">
+    <textarea id="mySiGML" class="txtaSiGMLText" rows="6">
   </div>
 </div>
 
