suggesties weergeven via jquery autocomplete

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Enter Sentence:<br>
 
 <div>
   <div class="ui-widget">
-    <textarea id="mySiGML" class="txtaSiGMLText" rows="6">
+    <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea>
   </div>
 </div>
 
