meerdere woorden in willekeurige volgorde aan suggesties matchen

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ $( function() {
          return $.ui.autocomplete.escapeRegex(tm);
     }).join('|');
     var matcher = new RegExp("\\b" + term, "i");
-      return $.grep(array, function (value) {
+    return $.grep(array, function (value) {
+      alert(value);
        return matcher.test(value.label || value.value || value);
     });
   };
