--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ $( function() {
   $( "#mySiGML" ).autocomplete({
     source: options,
     multiple: true,
+    mustMatch: false,
     source: function (request, response) {
         response(customFilter(
         options, request.term));
