--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ $( function() {
     var term = $.map(arrayOfTerms, function (tm) {
       return $.ui.autocomplete.escapeRegex(tm);
     }).join('|');
+    alert(term);
     var matcher = new RegExp("\\b" + term, "i");
     var m = $.grep(array, function (value) {
       return matcher.test(value.label || value.value || value);
