meerdere woorden in willekeurige volgorde aan suggesties matchen

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $( function() {
     // }).join('|');
     // alert(term);
     // var matcher = new RegExp("\\b" + term, "i");
-    var m = $.grep(array, function (value) {
-      return matcher.test(value.label || value.value || value);
-    });
+    // var m = $.grep(array, function (value) {
+    //   return matcher.test(value.label || value.value || value);
+    // });
     // alert(m);
     // return m;
     arrayOfTerms.forEach(function (term) {
