suggesties vastmaken aan inputveld

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $( function() {
 
   $( "#mySiGML" ).autocomplete({
     source: options,
-    appendTo: "#mySiGML";
+    appendTo: "#mySiGML",
     multiple: true,
     mustMatch: false,
     source: function (request, response) {
