suggesties vastmaken aan inputveld

--- a/index.html
+++ b/index.html
@@ -204,10 +204,9 @@ Enter Sentence:<br>
 
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul> -->
 
-<div>
-  <div class="ui-widget">
-    <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea>
-  </div>
+
+<div class="ui-front">
+  <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea>
 </div>
 
 <br>
