suggesties vastmaken aan inputveld

--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@ Enter Sentence:<br>
 
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul> -->
 
-
+<!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea> -->
 <div class="ui-widget">
-  <div id ="suggestions">
-  <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea>
+  <div id ="suggestions" contenteditable=true>
+  
   </div>
 </div>
 
