suggesties vastmaken aan inputveld

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Enter Sentence:<br>
 
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea> -->
 <div class="ui-widget">
-  <div id ="suggestions" contenteditable=true>
+  <div id ="mySiGML" contenteditable=true>
   
   </div>
 </div>
