suggesties vastmaken aan inputveld

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Enter Sentence:<br>
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"> -->
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6" oninput="suggestions(this.value)">
 </textarea>
-
+<input id="mySiGML" class="txtaSiGMLText">
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul> -->
 
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea> -->
