suggesties vastmaken aan inputveld

--- a/index.html
+++ b/index.html
@@ -205,10 +205,8 @@ Enter Sentence:<br>
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul> -->
 
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea> -->
-<div class="ui-widget">
-  <div id ="mySiGML" contenteditable=true class="txtaSiGMLText" rows="6">
-  
-  </div>
+<div class="ui-widget" id="suggestions">
+ <input id="mySiGML" class="txtaSiGMLText">
 </div>
 
 <br>
