--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $( function() {
 
   $( "#mySiGML" ).autocomplete({
     source: options,
-    appendTo: "#suggestions",
+    appendTo: "#mySiGML",
     multiple: true,
     mustMatch: false,
     source: function (request, response) {
@@ -205,8 +205,10 @@ Enter Sentence:<br>
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul> -->
 
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea> -->
-<div class="ui-widget" id="suggestions">
- <input id="mySiGML" class="txtaSiGMLText">
+<div class="ui-widget">
+  <div id ="mySiGML" contenteditable=true class="txtaSiGMLText" rows="6">
+  
+  </div>
 </div>
 
 <br>
