suggesties vastmaken aan inputveld

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Enter Sentence:<br>
 <ul id="suggestions" class="suggestions" style="text-align:center;"></ul> -->
 
 <!-- <textarea id="mySiGML" class="txtaSiGMLText" rows="6"></textarea> -->
-<div class="ui-widget" id="suggestions">
+<div class="ui-widget" id="suggestions" style="max-width: 500px;">
   <input id="mySiGML" class="txtaSiGMLText">
 </div>
 
