avatar rechts en overige elementen links

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@ function goPython(text){
 <!-- CWA signing avatar panel 0 -->
 <!--================================================================-->
 <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-<div class="CWASAAvatar av0" align="center" ></div>
+<div class="CWASAAvatar av0" align="right" ></div>
 <!--================================================================-->
 
 
-<div align="center">
+<div align="left">
 Enter Sentence:<br>
 <div class="ui-widget" id="suggestions">
   <input id="mySiGML" class="txtaSiGMLText">
