avatar rechts en overige elementen links

--- a/index.html
+++ b/index.html
@@ -165,10 +165,11 @@ function goPython(text){
 
 
 <span align="left">
-  Enter Sentence:<br>
-  <div class="ui-widget" id="suggestions">
+  Enter Sentence:
+  <br>
+  <span class="ui-widget" id="suggestions">
     <input id="mySiGML" class="txtaSiGMLText">
-  </div>
+  </span>
 
   <br>
   <!-- <input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' /> -->
