avatar rechts en overige elementen links

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function goPython(text){
 <h3>Interface ZonMW COVID-19 Project</h3>
 
 
-
+<div>
 <!-- CWA signing avatar panel 0 -->
 <!--================================================================-->
 <!-- <div class="CWASAPanel av0" align="center" ></div> -->
@@ -183,6 +183,7 @@ function goPython(text){
   <input id="myURL" class="txtSiGMLURL av0" value="house.sigml" type="text" />
   <br> -->
 </span>
+</div>
 
   <!-- <script type="text/python" src="test.py"></script>
   <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
