--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@ function goPython(text){
 <!-- CWA signing avatar panel 0 -->
 <!--================================================================-->
 <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-<span class="CWASAAvatar av0" align="right" ></span>
+<span class="CWASAAvatar av0" align="left" ></span>
 <!--================================================================-->
 
-<span align="left">
+<span align="right">
   Enter Sentence:
   <br>
   <span class="ui-widget" id="suggestions">
