avatar rechts en overige elementen links

--- a/index.html
+++ b/index.html
@@ -156,13 +156,8 @@ function goPython(text){
 <h3>Interface ZonMW COVID-19 Project</h3>
 
 
-<!-- CWA signing avatar panel 0 -->
-<!--================================================================-->
-<!-- <div class="CWASAPanel av0" align="center" ></div> -->
-<span class="CWASAAvatar av0" align="left" ></span>
-<!--================================================================-->
 
-<span align="right" style="display: inline-block;">
+<span align="left" style="display: inline-block;">
   Enter Sentence:
   <br>
   <span class="ui-widget" id="suggestions">
@@ -181,6 +176,13 @@ function goPython(text){
   <input id="myURL" class="txtSiGMLURL av0" value="house.sigml" type="text" />
   <br> -->
 </span>
+
+<!-- CWA signing avatar panel 0 -->
+<!--================================================================-->
+<!-- <div class="CWASAPanel av0" align="center" ></div> -->
+<span class="CWASAAvatar av0" align="right" ></span>
+<!--================================================================-->
+
 
   <!-- <script type="text/python" src="test.py"></script>
   <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
