avatar links en overige elementen rechts

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ function goPython(text){
 <!--================================================================-->
 <h3>Interface ZonMW COVID-19 Project</h3>
 
-<div>
-  <!-- CWA signing avatar panel 0 -->
+<div align="center">
+  <!-- CWA signing avatar panel 0 --> 
   <!--================================================================-->
   <!-- <div class="CWASAPanel av0" align="center" ></div> -->
   <span class="CWASAAvatar av0" align="right" ></span>
