--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ function goPython(text){
   <span align="left" style="display: inline-block; vertical-align: top;">
     Enter Sentence:
     <br>
-    <span class="ui-widget" id="suggestions" style="margin:20px">
+    <span class="ui-widget" id="suggestions" style="margin:10px, margin-top:10px, margin-bottom:10px;">
       <input id="mySiGML" class="txtaSiGMLText">
     </span>
 
