avatar links en overige elementen rechts

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ function goPython(text){
   <span class="CWASAAvatar av0" align="right" ></span>
   <!--================================================================-->
 
-  <span align="left" style="display: inline-block; vertical-align: top;">
+  <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
     Enter Sentence:
     <br>
     <span class="ui-widget" id="suggestions" style="margin:10px, margin-top:10px, margin-bottom:10px;">
