--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ function goPython(text){
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
     Enter Sentence:
     <br>
-    <span class="ui-widget" id="suggestions" style="margin:10px, margin-top:10px, margin-bottom:10px;">
-      <input id="mySiGML" class="txtaSiGMLText">
+    <span class="ui-widget" id="suggestions">
+      <input id="mySiGML" class="txtaSiGMLText" style="margin:10px">
     </span>
 
     <br>
