avatar links en overige elementen rechts

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ function goPython(text){
     Enter Sentence:
     <br>
     <span class="ui-widget" id="suggestions">
-      <input id="mySiGML" class="txtaSiGMLText" style="margin:10px">
+      <input id="mySiGML" class="txtaSiGMLText" style="margin-top:10px;margin-bottom:10px;">
     </span>
 
     <br>
