sigml naar avatar test

--- a/index.html
+++ b/index.html
@@ -171,14 +171,13 @@ function goPython(text){
 
     <br>
     <!-- <input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' /> -->
-    <input type="button" id = "play" value="Play"/>
+    <input type="button" id = "play" value="Play" onclick='playURL("house.sigml");'/>
     <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
     <br>
     <br>
     Adjust speed: <span class="CWASASpeed av0"></span>
     <br>
-    New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
-    <input id="myURL" class="txtSiGMLURL av0" value="house.sigml" type="text" />
+    
     <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
     <input id="myURL" class="txtSiGMLURL av0" value="house.sigml" type="text" />
     <br> -->
