sigml naar avatar test

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ function goPython(text){
 
     <br>
     <!-- <input type="button" id = "play" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' /> -->
-    <input type="button" id = "play" value="Play" onclick='playURL("house.sigml");'/>
+    <input type="button" id="play" value="Translate" onclick='playURL("house.sigml");'/>
     <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
     <br>
     <br>
