woord omzetten naar sigml test

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@ function translate(text){
     Adjust speed: <span class="CWASASpeed av0"></span>
     <br>
     New Text: <input type="button" value="doText" onclick='playText(document.getElementById("mySiGML2").value);' /><br>
-    <textarea id="mySiGML2" class="txtaSiGMLText" rows="6" >
+    <textarea id="mySiGML2" class="txtaSiGMLText" rows="6" ></textarea>
     <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
-    <input id="myURL" class="txtSiGMLURL av0" value="house.sigml" type="text" />
-    <br> -->
+    <input id="myURL" class="txtSiGMLURL av0" value="house.sigml" type="text" /> -->
+    <br>
   </span>
 
   <!-- <script type="text/python" src="test.py"></script>
