--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@ function toSiGML(text){
   xmlString = "<sigml><hns_sign gloss='house'><hamnosys_manual><hamsymmlr/><hamflathand/><hamextfingerul/><hampalmd/><hamtouch/><hamhead/><hammovedr/><hamsmallmod/><hammoved/></hamnosys_manual></hns_sign></sigml>"
   // Use it to turn your xmlString into an XMLDocument
   var xmlDoc = parser.parseFromString(xmlString, "application/xml");
-  alert(xmlDoc)
-  // playText(xmlDoc);
+  playText(xmlDoc);
 }
 // function goPython(text){
 //     $.ajax({
