--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ function toSiGML(text){
   
   // Use it to turn your xmlString into an XMLDocument
   var xmlDoc = parser.parseFromString(xmlString, "text/xml");
-  alert(xmlDoc.data());
+  alert(xmlDoc.data;
   playText(xmlDoc);
 }
 // function goPython(text){
