--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ function toSiGML(text){
   // Checks whether the sign has a mouthpicture
   if (translation.length == 2) {
     sampa = translation[1];
-    xmlString += '<hamnosys_nonmanual><hnm_mouthpicture=' + sampa + '/></hamnosys_nonmanual>';
+    xmlString += '<hamnosys_nonmanual><hnm_mouthpicture="' + sampa + '"/></hamnosys_nonmanual>';
   }
   
   sigml = translation[0];
