woord omzetten naar sigml test

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ function toSiGML(text){
 
   translation = json[text];
 
+  alert(translation);
   // Checks whether the sign has a mouthpicture
   if (translation.length == 2) {
     sampa = translation[1];
