woord omzetten naar sigml test

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ function toSiGML(text){
 
   xmlString = '<?xml version="1.0" encoding="utf-8"?><sigml><hns_sign gloss="' + text + '">';
 
+  alert(text);
   translation = json[text];
 
   alert(translation);
