--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ function toSiGML(text){
 
   translation = json[text];
 
-  log(translation);
+  console.log(translation);
   // Checks whether the sign has a mouthpicture
   if (translation.length == 2) {
     sampa = translation[1];
@@ -149,7 +149,7 @@ function toSiGML(text){
   }
 
   xmlString += "</hamnosys_manual></hns_sign></sigml>"
-  log(xmlString);
+  console.log(xmlString);
   playText(xmlString);
 }
 // function goPython(text){
