--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@ function toSiGML(text){
 
   console.log(translation);
   // Checks whether the sign has a mouthpicture
-  if (translation.length == 2) {
-    sampa = translation[1];
-    xmlString += '<hamnosys_nonmanual><hnm_mouthpicture="' + sampa + '"/></hamnosys_nonmanual>';
-  }
+  // if (translation.length == 2) {
+  //   sampa = translation[1];
+  //   xmlString += '<hamnosys_nonmanual><hnm_mouthpicture="' + sampa + '"/></hamnosys_nonmanual>';
+  // }
   
   sigml = translation[0];
   xmlString += '<hamnosys_manual>';
